--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-analytics:20.0.0' // Replace with the Firebase component you are using
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     implementation 'com.google.firebase:firebase-database:20.0.0'
 
