--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'com.google.gms.google-services' version '4.3.10'
+    id 'net.linguica.maven-settings' version '0.5'
 
 }
 
